--- a/templates/edit_record.html
+++ b/templates/edit_record.html
@@ -29,6 +29,7 @@
             <th>{% trans %}Content{% endtrans %}</th>
             <th>{% trans %}Priority{% endtrans %}</th>
             <th>{% trans %}TTL{% endtrans %}</th>
+            <th>{% trans %}Disabled{% endtrans %}</th>
         </tr>
         </thead>
         <tr>
@@ -74,6 +75,9 @@
                        pattern="[0-9]*" value="{{ record['prio'] }}"></td>
             <td><input class="form-control form-control-sm" type="number" name="ttl" min="0" max="2147483647"
                        pattern="[0-9]*" value="{{ record['ttl'] }}"></td>
+            <td>
+                <input class="form-check-input" type="checkbox" name="disabled" {% if record['disabled'] == 1 %}checked{% endif %}>
+            </td>
             {% endif %}
         </tr>
     </table>
