--- a/templates/index_list.html
+++ b/templates/index_list.html
@@ -1,46 +1,46 @@
 <h5 class="mb-3">{% trans %}Welcome{% endtrans %} {{ user_name }}</h5>
 <ul class="list-group">
-    {% if perm_search %}
+    {% if permissions['perm_search'] %}
         <li class="list-group-item list-group-item-action">
             <i class="bi bi-search"></i> <a href="search.php">{% trans %}Search zones and records{% endtrans %}</a>
         </li>
     {% endif %}
-    {% if perm_view_zone_own or perm_view_zone_other %}
+    {% if permissions['perm_view_zone_own'] or permissions['perm_view_zone_other'] %}
         <li class="list-group-item list-group-item-action">
             <i class="bi bi-diagram-3"></i> <a href="list_zones.php">{% trans %}List zones{% endtrans %}</a>
         </li>
     {% endif %}
-    {% if perm_zone_master_add %}
+    {% if permissions['perm_zone_master_add'] %}
         <li class="list-group-item list-group-item-action">
             <i class="bi bi-files"></i> <a href="list_zone_templ.php">{% trans %}List zone templates{% endtrans %}</a>
         </li>
     {% endif %}
-    {% if perm_supermaster_view %}
+    {% if permissions['perm_supermaster_view'] %}
         <li class="list-group-item list-group-item-action">
             <i class="bi bi-hdd-rack"></i> <a href="list_supermasters.php">{% trans %}List supermasters{% endtrans %}</a>
         </li>
     {% endif %}
-    {% if perm_zone_master_add %}
+    {% if permissions['perm_zone_master_add'] %}
         <li class="list-group-item list-group-item-action">
             <i class="bi bi-plus-circle"></i> <a href="add_zone_master.php">{% trans %}Add master zone{% endtrans %}</a>
         </li>
     {% endif %}
-    {% if perm_zone_slave_add %}
+    {% if permissions['perm_zone_slave_add'] %}
         <li class="list-group-item list-group-item-action">
             <i class="bi bi-plus-circle-dotted"></i> <a href="add_zone_slave.php">{% trans %}Add slave zone{% endtrans %}</a>
         </li>
     {% endif %}
-    {% if perm_supermaster_add %}
+    {% if permissions['perm_supermaster_add'] %}
         <li class="list-group-item list-group-item-action">
             <i class="bi bi-hdd-network"></i> <a href="add_supermaster.php">{% trans %}Add supermaster{% endtrans %}</a>
         </li>
     {% endif %}
-    {% if perm_zone_master_add %}
+    {% if permissions['perm_zone_master_add'] %}
         <li class="list-group-item list-group-item-action">
             <i class="bi bi-collection"></i> <a href="bulk_registration.php">{% trans %}Bulk registration{% endtrans %}</a>
         </li>
     {% endif %}
-    {% if perm_is_godlike and dblog_use == true %}
+    {% if permissions['perm_is_godlike'] and dblog_use == true %}
     <li class="list-group-item list-group-item-action">
         <i class="bi bi-list-ul"></i> <a href="list_log_zones.php">{% trans %}Zone logs{% endtrans %}</a>
     </li>
@@ -53,7 +53,7 @@
     <li class="list-group-item list-group-item-action">
         <i class="bi bi-people"></i> <a href="users.php">{% trans %}User administration{% endtrans %}</a>
     </li>
-    {% if perm_templ_perm_edit %}
+    {% if permissions['perm_templ_perm_edit'] %}
     <li class="list-group-item list-group-item-action">
         <i class="bi bi-person-lock"></i> <a href="users.php">{% trans %}List permission templates{% endtrans %}</a>
     </li>
