--- a/templates/add_zone_slave.html
+++ b/templates/add_zone_slave.html
@@ -2,7 +2,7 @@
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="index.php">{% trans %}Home{% endtrans %}</a></li>
         <li class="breadcrumb-item"><a href="list_zones.php">{% trans %}Zones{% endtrans %}</a></li>
-        <li class="breadcrumb-item active" aria-current="page">{% trans %}Add slave zone{% endtrans %}</li>
+        <li class="breadcrumb-item" aria-current="page">{% trans %}Add slave zone{% endtrans %}</li>
     </ol>
 </nav>
 
