--- a/templates/add_zone_templ.html
+++ b/templates/add_zone_templ.html
@@ -3,7 +3,7 @@
         <li class="breadcrumb-item"><a href="index.php">{% trans %}Home{% endtrans %}</a></li>
         <li class="breadcrumb-item"><a href="list_zones.php">{% trans %}Zones{% endtrans %}</a></li>
         <li class="breadcrumb-item"><a href="list_zone_templ.php">{% trans %}Zone templates{% endtrans %}</a></li>
-        <li class="breadcrumb-item active" aria-current="page">{% trans %}Add template{% endtrans %}</li>
+        <li class="breadcrumb-item" aria-current="page">{% trans %}Add template{% endtrans %}</li>
     </ol>
 </nav>
 
