--- a/templates/delete_domain.html
+++ b/templates/delete_domain.html
@@ -9,7 +9,7 @@
             {{ zone_info['name'] }}
             {% endif %}
         </a></li>
-        <li class="breadcrumb-item active" aria-current="page">{% trans %}Delete Zone{% endtrans %}</li>
+        <li class="breadcrumb-item" aria-current="page">{% trans %}Delete Zone{% endtrans %}</li>
     </ol>
 </nav>
 
