--- a/templates/delete_record.html
+++ b/templates/delete_record.html
@@ -9,7 +9,7 @@
             {{ zone_name }}
             {% endif %}
         </a></li>
-        <li class="breadcrumb-item active" aria-current="page">{% trans %}Delete Record{% endtrans %}</li>
+        <li class="breadcrumb-item" aria-current="page">{% trans %}Delete Record{% endtrans %}</li>
     </ol>
 </nav>
 
