--- a/templates/dnssec.html
+++ b/templates/dnssec.html
@@ -9,7 +9,7 @@
             <a href="edit.php?id={{ zone_id }}">{{ domain_name }}</a>
             {% endif %}
         </li>
-        <li class="breadcrumb-item active" aria-current="page">{% trans %}DNSSEC{% endtrans %}</li>
+        <li class="breadcrumb-item" aria-current="page">{% trans %}DNSSEC{% endtrans %}</li>
     </ol>
 </nav>
 
