--- a/templates/dnssec_edit_key.html
+++ b/templates/dnssec_edit_key.html
@@ -12,7 +12,7 @@
         <li class="breadcrumb-item">
             <a href="dnssec.php?id={{ zone_id }}">{% trans %}DNSSEC{% endtrans %}</a>
         </li>
-        <li class="breadcrumb-item active" aria-current="page">
+        <li class="breadcrumb-item" aria-current="page">
             {% if key_info[5] %}
             {% trans %}Deactivate key{% endtrans %}
             {% else %}
