--- a/templates/edit.html
+++ b/templates/edit.html
@@ -9,7 +9,7 @@
             {{ zone_name_to_display }}
             {% endif %}
         </li>
-        <li class="breadcrumb-item active" aria-current="page">{% trans %}Edit{% endtrans %}</li>
+        <li class="breadcrumb-item" aria-current="page">{% trans %}Edit{% endtrans %}</li>
     </ol>
 </nav>
 
