--- a/templates/edit_zone_templ.html
+++ b/templates/edit_zone_templ.html
@@ -4,7 +4,7 @@
         <li class="breadcrumb-item"><a href="list_zones.php">{% trans %}Zones{% endtrans %}</a></li>
         <li class="breadcrumb-item"><a href="list_zone_templ.php">{% trans %}Zone templates{% endtrans %}</a></li>
         <li class="breadcrumb-item">{{ templ_details['name'] }}</li>
-        <li class="breadcrumb-item active" aria-current="page">{% trans %}Edit template{% endtrans %}</li>
+        <li class="breadcrumb-item" aria-current="page">{% trans %}Edit template{% endtrans %}</li>
     </ol>
 </nav>
 
