--- a/templates/edit_zone_templ_record.html
+++ b/templates/edit_zone_templ_record.html
@@ -5,7 +5,7 @@
         <li class="breadcrumb-item"><a href="list_zone_templ.php">{% trans %}Zone templates{% endtrans %}</a></li>
         <li class="breadcrumb-item"><a href="edit_zone_templ.php?id={{ zone_templ_id }}">{{ templ_details['name'] }}</a>
         </li>
-        <li class="breadcrumb-item active" aria-current="page">{% trans %}Edit record{% endtrans %}</li>
+        <li class="breadcrumb-item" aria-current="page">{% trans %}Edit record{% endtrans %}</li>
     </ol>
 </nav>
 
