--- a/templates/add_perm_templ.html
+++ b/templates/add_perm_templ.html
@@ -3,7 +3,7 @@
         <li class="breadcrumb-item"><a href="index.php">{% trans %}Home{% endtrans %}</a></li>
         <li class="breadcrumb-item"><a href="users.php">{% trans %}Users{% endtrans %}</a></li>
         <li class="breadcrumb-item"><a href="list_perm_templ.php">{% trans %}Permission templates{% endtrans %}</a></li>
-        <li class="breadcrumb-item active" aria-current="page">{% trans %}Add{% endtrans %}</li>
+        <li class="breadcrumb-item" aria-current="page">{% trans %}Add{% endtrans %}</li>
     </ol>
 </nav>
 
