--- a/templates/add_supermaster.html
+++ b/templates/add_supermaster.html
@@ -2,7 +2,7 @@
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="index.php">{% trans %}Home{% endtrans %}</a></li>
         <li class="breadcrumb-item"><a href="list_supermasters.php">{% trans %}Supermasters{% endtrans %}</a></li>
-        <li class="breadcrumb-item active" aria-current="page">{% trans %}Add supermaster{% endtrans %}</li>
+        <li class="breadcrumb-item" aria-current="page">{% trans %}Add supermaster{% endtrans %}</li>
     </ol>
 </nav>
 
