--- a/templates/dnssec_add_key.html
+++ b/templates/dnssec_add_key.html
@@ -12,7 +12,7 @@
         <li class="breadcrumb-item">
             <a href="dnssec.php?id={{ zone_id }}">{% trans %}DNSSEC{% endtrans %}</a>
         </li>
-        <li class="breadcrumb-item active" aria-current="page">{% trans %}Add key{% endtrans %}</li>
+        <li class="breadcrumb-item" aria-current="page">{% trans %}Add key{% endtrans %}</li>
     </ol>
 </nav>
 
