--- a/templates/dnssec_ds_dnskey.html
+++ b/templates/dnssec_ds_dnskey.html
@@ -12,7 +12,7 @@
         <li class="breadcrumb-item">
             <a href="dnssec.php?id={{ zone_id }}">{% trans %}DNSSEC{% endtrans %}</a>
         </li>
-        <li class="breadcrumb-item active" aria-current="page">
+        <li class="breadcrumb-item" aria-current="page">
             {% trans %}DS and DNS keys{% endtrans %}
         </li>
     </ol>
