--- a/templates/edit_comment.html
+++ b/templates/edit_comment.html
@@ -9,7 +9,7 @@
             <a href="edit.php?id={{ zone_id }}">{{ zone_name }}</a>
             {% endif %}
         </li>
-        <li class="breadcrumb-item active" aria-current="page">{% trans %}Edit comment{% endtrans %}</li>
+        <li class="breadcrumb-item" aria-current="page">{% trans %}Edit comment{% endtrans %}</li>
     </ol>
 </nav>
 
