--- a/templates/list_perm_templ.html
+++ b/templates/list_perm_templ.html
@@ -2,7 +2,7 @@
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="index.php">{% trans %}Home{% endtrans %}</a></li>
         <li class="breadcrumb-item"><a href="users.php">{% trans %}Users{% endtrans %}</a></li>
-        <li class="breadcrumb-item active" aria-current="page">{% trans %}Permission templates{% endtrans %}</li>
+        <li class="breadcrumb-item" aria-current="page">{% trans %}Permission templates{% endtrans %}</li>
     </ol>
 </nav>
 
