--- a/templates/users.html
+++ b/templates/users.html
@@ -1,7 +1,7 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="index.php">{% trans %}Home{% endtrans %}</a></li>
-        <li class="breadcrumb-item active" aria-current="page">{% trans %}Users{% endtrans %}</li>
+        <li class="breadcrumb-item" aria-current="page">{% trans %}Users{% endtrans %}</li>
     </ol>
 </nav>
 
