--- a/templates/index_list.html
+++ b/templates/index_list.html
@@ -1,46 +1,46 @@
 <h5 class="mb-3">{% trans %}Welcome{% endtrans %} {{ user_name }}</h5>
 <ul class="list-group">
-    {% if permissions['perm_search'] %}
+    {% if permissions['search'] %}
         <li class="list-group-item list-group-item-action">
             <i class="bi bi-search"></i> <a href="index.php?page=search">{% trans %}Search zones and records{% endtrans %}</a>
         </li>
     {% endif %}
-    {% if permissions['perm_view_zone_own'] or permissions['perm_view_zone_other'] %}
+    {% if permissions['zone_content_view_own'] or permissions['zone_content_view_others'] %}
         <li class="list-group-item list-group-item-action">
             <i class="bi bi-diagram-3"></i> <a href="index.php?page=list_zones">{% trans %}List zones{% endtrans %}</a>
         </li>
     {% endif %}
-    {% if permissions['perm_zone_master_add'] %}
+    {% if permissions['zone_master_add'] %}
         <li class="list-group-item list-group-item-action">
             <i class="bi bi-files"></i> <a href="index.php?page=list_zone_templ">{% trans %}List zone templates{% endtrans %}</a>
         </li>
     {% endif %}
-    {% if permissions['perm_supermaster_view'] %}
+    {% if permissions['supermaster_view'] %}
         <li class="list-group-item list-group-item-action">
             <i class="bi bi-hdd-rack"></i> <a href="index.php?page=list_supermasters">{% trans %}List supermasters{% endtrans %}</a>
         </li>
     {% endif %}
-    {% if permissions['perm_zone_master_add'] %}
+    {% if permissions['zone_master_add'] %}
         <li class="list-group-item list-group-item-action">
             <i class="bi bi-plus-circle"></i> <a href="index.php?page=add_zone_master">{% trans %}Add master zone{% endtrans %}</a>
         </li>
     {% endif %}
-    {% if permissions['perm_zone_slave_add'] %}
+    {% if permissions['zone_slave_add'] %}
         <li class="list-group-item list-group-item-action">
             <i class="bi bi-plus-circle-dotted"></i> <a href="index.php?page=add_zone_slave">{% trans %}Add slave zone{% endtrans %}</a>
         </li>
     {% endif %}
-    {% if permissions['perm_supermaster_add'] %}
+    {% if permissions['supermaster_add'] %}
         <li class="list-group-item list-group-item-action">
             <i class="bi bi-hdd-network"></i> <a href="index.php?page=add_supermaster">{% trans %}Add supermaster{% endtrans %}</a>
         </li>
     {% endif %}
-    {% if permissions['perm_zone_master_add'] %}
+    {% if permissions['zone_master_add'] %}
         <li class="list-group-item list-group-item-action">
             <i class="bi bi-collection"></i> <a href="index.php?page=bulk_registration">{% trans %}Bulk registration{% endtrans %}</a>
         </li>
     {% endif %}
-    {% if permissions['perm_is_godlike'] and dblog_use == true %}
+    {% if permissions['user_is_ueberuser'] and dblog_use == true %}
     <li class="list-group-item list-group-item-action">
         <i class="bi bi-list-ul"></i> <a href="index.php?page=list_log_zones">{% trans %}Zone logs{% endtrans %}</a>
     </li>
@@ -53,7 +53,7 @@
     <li class="list-group-item list-group-item-action">
         <i class="bi bi-people"></i> <a href="index.php?page=users">{% trans %}User administration{% endtrans %}</a>
     </li>
-    {% if permissions['perm_templ_perm_edit'] %}
+    {% if permissions['templ_perm_edit'] %}
     <li class="list-group-item list-group-item-action">
         <i class="bi bi-person-lock"></i> <a href="index.php?page=users">{% trans %}List permission templates{% endtrans %}</a>
     </li>
