--- a/templates/add_record.html
+++ b/templates/add_record.html
@@ -48,7 +48,7 @@
                     {% endfor %}
                 </select>
             </td>
-            <td><textarea class="form-control form-control-sm" name="content" style="height: 1em;" required>{{ content }}</textarea>
+            <td><textarea class="form-control form-control-sm" name="content" rows="1" required>{{ content }}</textarea>
                 <div class="invalid-feedback">{% trans %}Provide content{% endtrans %}</div>
             </td>
             <td class="col-sm-1"><input class="form-control form-control-sm" type="number" name="prio"
