--- a/templates/edit_record.html
+++ b/templates/edit_record.html
@@ -67,7 +67,7 @@
                     {% endif %}
                 </select>
             </td>
-            <td><textarea class="form-control form-control-sm" name="content" style="height: 1em;" required>{{ record['content'] }}</textarea>
+            <td><textarea class="form-control form-control-sm" name="content" rows="1" required>{{ record['content'] }}</textarea>
                 <div class="invalid-feedback">{% trans %}Provide content{% endtrans %}</div>
             </td>
             <td><input class="form-control form-control-sm" type="number" name="prio" min="0" max="65535"
