refactor: move textarea autoresize code to separate file, use it in multiple places

--- a/templates/edit_record.html
+++ b/templates/edit_record.html
@@ -83,3 +83,5 @@
     <input class="btn btn-primary btn-sm" type="submit" name="commit" value="{% trans %}Update{% endtrans %}">&nbsp;&nbsp;
     <input class="btn btn-secondary btn-sm" type="reset" name="reset" value="{% trans %}Reset{% endtrans %}">&nbsp;&nbsp;
 </form>
+
+<script src="assets/textareaAutoResize.js"></script>
