refactor: Update language selection box enabling/disabling logic

--- a/templates/login.html
+++ b/templates/login.html
@@ -21,7 +21,7 @@
                 <div class="invalid-feedback">{% trans %}Please provide a password{% endtrans %}</div>
             </div>
         </div>
-        {% if locale_options|split('/option')|length > 2 %}
+        {% if show_language_selector %}
         <div>
             <label for="language" class="form-label">{% trans %}Language{% endtrans %}</label>
             <select class="form-select form-select-sm" id="language" name="userlang">
