chore: updated translation template, resolves #569

--- a/templates/delete_domains.html
+++ b/templates/delete_domains.html
@@ -38,9 +38,7 @@
                 {% endif %}
 
                 {% if zone['has_supermaster'] %}
-                {% trans %}You are about to delete a slave zone of which the master nameserver is a supermaster. Deleting
-                the zone now, will result in temporary removal only. Whenever the supermaster sends a notification for
-                this zone, it will be added again!{% endtrans %}
+                {% trans %}You are about to delete a slave zone of which the master nameserver is a supermaster. Deleting the zone now, will result in temporary removal only. Whenever the supermaster sends a notification for this zone, it will be added again!{% endtrans %}
                 {% endif %}
             </td>
         </tr>
