--- a/templates/delete_user.html
+++ b/templates/delete_user.html
@@ -13,8 +13,7 @@
         {% if zones_count > 0 %}
         <tr>
             <td colspan="5">
-                {% trans %}You are about to delete a user. This user is owner for a number of zones. Please decide what
-                to do with these zones.{% endtrans %}
+                {% trans %}You are about to delete a user. This user is owner for a number of zones. Please decide what to do with these zones.{% endtrans %}
             </td>
         </tr>
 
