--- a/templates/add_zone_templ_record.html
+++ b/templates/add_zone_templ_record.html
@@ -59,10 +59,8 @@
             <td colspan="6">{% trans %}The following placeholders can be used in template records{% endtrans %}</td>
         </tr>
         <tr>
-            <td colspan="6"><br>&nbsp;&nbsp;&nbsp;&nbsp; * [ZONE] - {% trans %}substituted with current zone name{%
-                endtrans %}<br>
-                &nbsp;&nbsp;&nbsp;&nbsp; * [SERIAL] - {% trans %}substituted with current date and 2 numbers{% endtrans
-                %}
+            <td colspan="6"><br>&nbsp;&nbsp;&nbsp;&nbsp; * [ZONE] - {% trans %}substituted with current zone name{% endtrans %}<br>
+                &nbsp;&nbsp;&nbsp;&nbsp; * [SERIAL] - {% trans %}substituted with current date and 2 numbers{% endtrans %}
                 (YYYYMMDD + 00)<br>
                 &nbsp;&nbsp;&nbsp;&nbsp; * [NS1] - {% trans %}substituted with 1st name server{% endtrans %}<br>
                 &nbsp;&nbsp;&nbsp;&nbsp; * [NS2] - {% trans %}substituted with 2nd name server{% endtrans %}<br>
@@ -75,12 +73,10 @@
             <td colspan="6"><br><b>{% trans %}Examples:{% endtrans %}</b></td>
         </tr>
         <tr>
-            <td colspan="6">{% trans %}To add a subdomain foo in a zone template you would put foo.[ZONE] into the name
-                field.{% endtrans %}<br>
+            <td colspan="6">{% trans %}To add a subdomain foo in a zone template you would put foo.[ZONE] into the name field.{% endtrans %}<br>
                 {% trans %}To add a wildcard record put *.[ZONE] in the name field.{% endtrans %}<br>
                 {% trans %}Use just [ZONE] to have the domain itself return a value.{% endtrans %}<br>
-                {% trans %}For the SOA record, place [NS1] [HOSTMASTER] [SERIAL] 28800 7200 604800 86400 in the content
-                field.{% endtrans %}
+                {% trans %}For the SOA record, place [NS1] [HOSTMASTER] [SERIAL] 28800 7200 604800 86400 in the content field.{% endtrans %}
             </td>
         </tr>
         <tr>
