--- a/templates/delete_domain.html
+++ b/templates/delete_domain.html
@@ -24,9 +24,7 @@
 
 {% if slave_master_exists %}
 <p>
-    {% trans %}You are about to delete a slave zone of which the master nameserver is a supermaster. Deleting the
-    zone now, will result in temporary removal only. Whenever the supermaster sends a notification for this zone, it
-    will be added again!{% endtrans %}
+    {% trans %}You are about to delete a slave zone of which the master nameserver is a supermaster. Deleting the zone now, will result in temporary removal only. Whenever the supermaster sends a notification for this zone, it will be added again!{% endtrans %}
 </p>
 {% endif %}
 
