--- a/templates/add_perm_templ.html
+++ b/templates/add_perm_templ.html
@@ -37,7 +37,7 @@
         <tr>
             <td><input class="form-check-input" type="checkbox" name="perm_id[]" value="{{ perm['id'] }}"></td>
             <td>{{ perm['name'] }}</td>
-            <td>{% trans %}%descr%{% endtrans %}</td>
+            <td>{{ descr|trans }}</td>
         </tr>
         {% endfor %}
         </tbody>
