--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 {% if msg %}
-<div class="alert alert-{{ type }} alert-dismissible fade show" role="alert">{{ msg }}
+<div data-testid="session-error" class="alert alert-{{ type }} alert-dismissible fade show" role="alert">{{ msg }}
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
 {% endif %}
@@ -12,14 +12,14 @@
         <div>
             <label for="username" class="form-label">{% trans %}Username{% endtrans %}</label>
             <input type="text" data-testid="username-input" class="form-control form-control-sm" id="username" name="username" required>
-            <div class="invalid-feedback">{% trans %}Please provide a username{% endtrans %}</div>
+            <div data-testid="username-error" class="invalid-feedback">{% trans %}Please provide a username{% endtrans %}</div>
         </div>
         <div>
             <label for="password" class="form-label">{% trans %}Password{% endtrans %}</label>
             <div class="input-group">
                 <input type="password" data-testid="password-input" class="form-control form-control-sm" id="password" name="password" required>
                 <button class="btn btn-sm btn-outline-secondary" type="button" onclick="showPassword('password', 'eye')"><i class="bi bi-eye-fill" id="eye"></i></button>
-                <div class="invalid-feedback">{% trans %}Please provide a password{% endtrans %}</div>
+                <div data-testid="password-error" class="invalid-feedback">{% trans %}Please provide a password{% endtrans %}</div>
             </div>
         </div>
         {% if show_language_selector %}
