fix(install): Correct path to Bootstrap JavaScript file

--- a/install/templates/footer.html
+++ b/install/templates/footer.html
@@ -6,7 +6,7 @@
     </div>
 </footer>
 
-<script src="vendor/twbs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="../vendor/twbs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
     (function () {
