--- a/install/templates/step3.html.twig
+++ b/install/templates/step3.html.twig
@@ -19,7 +19,7 @@
             <tr>
                 <td width="210">{% trans %}Database type{% endtrans %}</td>
                 <td>
-                    <select class="form-select form-select-sm" name="type" onChange="updateFormFields(this.value)">
+                    <select class="form-select form-select-sm" name="db_type" onChange="updateFormFields(this.value)">
                         <option value="mysql">MySQL</option>
                         <option value="pgsql">PostgreSQL</option>
                         <option value="sqlite">SQLite</option>
@@ -30,7 +30,7 @@
             <tr id="username_row">
                 <td>{% trans %}Username{% endtrans %}</td>
                 <td class="w-25">
-                    <input class="form-control form-control-sm" type="text" id="username" name="user" value="" required>
+                    <input class="form-control form-control-sm" type="text" id="username" name="db_user" value="" required>
                     <div class="invalid-feedback">{% trans %}Provide the user name{% endtrans %}</div>
                 </td>
                 <td>{% trans %}The username to use to connect to the database, make sure the username has
@@ -42,7 +42,7 @@
                 <td>{% trans %}Password{% endtrans %}</td>
                 <td>
                     <div class="input-group">
-                        <input class="form-control form-control-sm" type="password" id="userpass" name="pass" value="" autocomplete="off" required>
+                        <input class="form-control form-control-sm" type="password" id="userpass" name="db_pass" value="" autocomplete="off" required>
                         <button class="btn btn-sm btn-outline-secondary" type="button" onclick="showPassword('userpass', 'eye1')"><i class="bi bi-eye-fill" id="eye1"></i></button>
                         <div class="invalid-feedback">{% trans %}Provide user password{% endtrans %}</div>
                     </div>
@@ -52,7 +52,7 @@
             <tr id="hostname_row">
                 <td>{% trans %}Hostname{% endtrans %}</td>
                 <td>
-                    <input class="form-control form-control-sm" type="text" id="host" name="host" value="localhost" required>
+                    <input class="form-control form-control-sm" type="text" id="host" name="db_host" value="localhost" required>
                     <div class="invalid-feedback">{% trans %}Provide the hostname{% endtrans %}</div>
                 </td>
                 <td>{% trans %}The hostname on which the PowerDNS database resides. Frequently, this will be "localhost".{% endtrans %}
@@ -61,7 +61,7 @@
             <tr id="dbport_row">
                 <td>{% trans %}DB Port{% endtrans %}</td>
                 <td>
-                    <input class="form-control form-control-sm" type="text" id="dbport" name="dbport" value="3306" required>
+                    <input class="form-control form-control-sm" type="text" id="db_port" name="db_port" value="3306" required>
                     <div class="invalid-feedback">{% trans %}Provide database port{% endtrans %}</div>
                 </td>
                 <td>{% trans %}The port the database server is listening on.{% endtrans %}</td>
@@ -69,7 +69,7 @@
             <tr>
                 <td>{% trans %}Database{% endtrans %}</td>
                 <td>
-                    <input class="form-control form-control-sm" type="text" name="name" value="" required>
+                    <input class="form-control form-control-sm" type="text" name="db_name" value="" required>
                     <div class="invalid-feedback">{% trans %}Provide the name of the database{% endtrans %}</div>
                 </td>
                 <td><span id="db_name_title">{% trans %}The name of the PowerDNS database.{% endtrans %}</span>
@@ -78,14 +78,14 @@
             </tr>
             <tr>
                 <td>{% trans %}DB charset{% endtrans %}</td>
-                <td><input class="form-control form-control-sm" type="text" name="charset" value=""></td>
+                <td><input class="form-control form-control-sm" type="text" name="db_charset" value=""></td>
                 <td>{% trans %}The charset (encoding) which will be used for new tables. Leave it empty then default database
                     charset will be used.{% endtrans %}
                 </td>
             </tr>
             <tr>
                 <td>{% trans %}DB collation{% endtrans %}</td>
-                <td><input class="form-control form-control-sm" type="text" name="collation" value=""></td>
+                <td><input class="form-control form-control-sm" type="text" name="db_collation" value=""></td>
                 <td>{% trans %}Set of rules for comparing characters in database. Leave it empty then default database
                     collation will be used.{% endtrans %}
                 </td>
