--- a/install/templates/step5.html.twig
+++ b/install/templates/step5.html.twig
@@ -25,6 +25,8 @@
         <input type="hidden" name="dns_hostmaster" value="{{ dns_hostmaster }}">
         <input type="hidden" name="dns_ns1" value="{{ dns_ns1 }}">
         <input type="hidden" name="dns_ns2" value="{{ dns_ns2 }}">
+        <input type="hidden" name="dns_ns3" value="{{ dns_ns3 }}">
+        <input type="hidden" name="dns_ns4" value="{{ dns_ns4 }}">
         <input type="hidden" name="step" value="{{ current_step }}">
         <input type="hidden" name="language" value="{{ language }}">
         <input type="hidden" name="step" value="{{ next_step }}">
